Now it looks for the JavaDB lib dir.  If it is found it sets this:
-Djava.ext.dirs=path-to-javadb-lib



svn path=/branches/embedded_v3_prelude_release/; revision=24649


Former-commit-id: 5cbd6d972641b068018830a13519d6b21408e5be